backup_gitlab-mutatingwebhook_global.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from-secret: gitlab/gitlab-certmanager-webhook-ca
    meta.helm.sh/release-name: gitlab
    meta.helm.sh/release-namespace: gitlab
  creationTimestamp: "2025-11-29T06:34:05Z"
  generation: 2
  labels:
    app: webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: gitlab
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: webhook
    app.kubernetes.io/version: v1.17.4
    helm.sh/chart: certmanager-v1.17.4
  name: gitlab-certmanager-webhook
  resourceVersion: "266300"
  uid: a4582ff5-2d15-4e4f-adb5-7d8c832a6fbf
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ3ekNDQVVpZ0F3SUJBZ0lSQUpGZW9kaGpIY2hqbUtlbVZuMHp4elV3Q2dZSUtvWkl6ajBFQXdNd0lqRWcKTUI0R0ExVUVBeE1YWTJWeWRDMXRZVzVoWjJWeUxYZGxZbWh2YjJzdFkyRXdIaGNOTWpVeE1USTVNRFl6TkRNNApXaGNOTWpZeE1USTVNRFl6TkRNNFdqQWlNU0F3SGdZRFZRUURFeGRqWlhKMExXMWhibUZuWlhJdGQyVmlhRzl2CmF5MWpZVEIyTUJBR0J5cUdTTTQ5QWdFR0JTdUJCQUFpQTJJQUJHM2RmdHpkSW1leHlnY2luOHZLVFVaTVZuZngKeGx2b05nSytPNHA0Y0hBTDRIMFRXOTBrK3RyVUVGVk0zZXRTeHZuQU9QcjFxbW1IN3l1RzRkN1cyV3pZWVh1WAovWnNocE8zTnBqUz [...]
    service:
      name: gitlab-certmanager-webhook
      namespace: gitlab
      path: /mutate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: webhook.cert-manager.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - cert-manager.io
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - certificaterequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
